--- a/game-server/package.json
+++ b/game-server/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "private": false,
   "dependencies": {
+    "crc": "0.2.0",
+    "log4js": "^0.6.21",
     "pomelo": "~1.0.0",
-    "crc": "0.2.0"
+    "pomelo-logger": "^0.1.6"
   }
 }
