--- a/game-server/package.json
+++ b/game-server/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "class.extend": "^0.9.1",
     "crc": "0.2.0",
+    "github": "^0.2.2",
     "jclass": "^0.2.5",
     "log4js": "^0.6.21",
     "pomelo": "~1.1.1",
