Adding PhysicsObject and making Player extend it. Also cleaning up various files.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": false,
   "dependencies": {
     "dead-reckoning": "*",
-    "jclass": "^0.2.5"
+    "jclass": "^0.2.5",
+    "merge": "^1.2.0"
   }
 }
