--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": false,
   "dependencies": {
-    "dead-reckoning": "*",
+    "dead-reckoning": "0.1.3",
     "hasharray": "^0.1.5",
     "jclass": "^0.2.5",
     "merge": "^1.2.0"
